# PolySampXpress

./: Abstract.py  AbstractManipulator.py  Camera.py  CameraGUI.py  CameraLicense  CameraSetings.py  Dockerfile  ExamplePyside2.py  Exceptions.py  Features.md  LICENSE  MainWindowCustomBar.py  MainWindowMenuBar.py  MainWindowQLabelROI.py  QlabelROI.py  README.md  Readme.md  RightClickMenu.py  Slider.py  TCIPManipulatorSS.py  TestGen.py  View.py  main.py  manual.md  requirements.txt  setup.cfg
Camera/: Camera.py  CameraSetings.py
Config/: CalibrationPointDataBase.json  CameraConfig.json  CameraSetings.json  ManipulatorConfig.json  ManipulatorFullConfig.json  PolaRoboczeConfig.json  Resolutions.json  StandaPosition.json  TreyConfig.json  test.json
Documentation/: PomiarOrtogonalnosci.xlsx
MAP/: PolaRobocze.py
MainWindow/: MainWindowIniciialisationFlag.py  MainWindowROIList.py  QlabelROI.py  RightClickMenu.py
Other_License/: ACSLicense
ROI/: ROI.py  ROILabelViue.py  ROILable.py  ROIList.py  RenameWidnow.py
SetupTools/: TestGen.py  requirements.txt
Standa_Motor_Driver_Documentation/: 8MT167M-25LS.cfg  8MT173-10.cfg
StartUP/: main.py  my_profile.prof
TCIPManipulatorKlient/: C848Dll.bas  C848_DLL.lib  InterfaceErrors.h  PI Errors.bas  PIControllerErrors.h  TCIPManipulator.py  tciptest.py  testy.py  wykonawczy.py
Tezis/: fileLocationParser.py  fileLocations.txt  main.tex
examples/: Qsignalexample.py  SliderTest.py  TCIPHost.py  sliderTestV2.py
manipulator/: AbstractManipulator.py  AbstractManipulatroInterfejs.py  ManipulatorInterfejs.py  (+1 more)
(+716 files in other folders)
