[metadata]
name = SPOMGui
description = Gui for Solaris Polyx line optical microscope1
author = Krzystof Olech
license_files = LICENSE
platforms = win64
classifiers =
    Programming Language :: Python :: 3.10
[options]
packages =
    BaseClass
    Calibration
    Camera
    ComunicationPoint
    ErrorHandling
    MainWindow
    Manipulator
    MAP
    ROI
    StartUP
    Symulators
    ThreadWorker
    WorkFeald
install_requires =
    pyqt5
    numpy
    opencv-python-headless
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
SPOMGui = py.typed

[flake8]
max-line-length = 160